--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "xlsx": "^0.18.5"
   },
   {
-  "proxy": "https://placement-portal-j0g9.onrender.com"  // URL of your backend server
+  "proxy": "https://placement-portal-j0g9.onrender.com"  
 }
 ,
   "scripts": {
